Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: "Sami" <pig#25850279>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -105,6 +105,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 {{trans-top|mammal of genus ''Sus''}}
 * Abau: {{t|aau|huok}}
 * {{trreq|ab}}
+* Acehnese: {{t|ace|bui}}
 * Afrikaans: {{t+|af|vark}}
 * Agarabi: {{t|agd|pon}}
 * Albanian: {{t|sq|derr|m}}, {{t|sq|thi|m}}
@@ -129,8 +130,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Belarusian: {{t|be|свіння|f|tr=svinnjá}}
 * Bengali: {{t|bn|শুওর|tr=shuor|sc=Beng}}
 * Breton: {{t+|br|pemoc'h|m}}
+* Buginese: {{t|bug|bawi|sc=Bugi}}
 * Bulgarian: {{t+|bg|свиня|f|tr=svinjá}}
-* Burmese: {{t+|my|ဝက်|tr=wé|sc=Mymr}}
+* Burmese: {{t+|my|ဝက်|tr=wak|sc=Mymr}}
 * Campidanese Sardinian: {{t|sro|procu|m}}, {{t|sro|mannali|m}}, {{t|sro|sue|f}}
 * Catalan: {{t+|ca|porc|m}}
 * Cebuano: {{t|ceb|baboy}}
@@ -168,15 +170,12 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Ido: {{qualifier|♂♀}} {{t+|io|porko}}, {{qualifier|♂}} {{t+|io|porkulo}}, {{qualifier|♂♀}} {{t+|io|porkino}}
 * Ilocano: {{t|ilo|baboy}}
 * Indonesian: {{t+|id|babi}}
-*: Acehnese: {{t|ace|bui}}
-*: Buginese: bawi
-*: Kaili: vavu
-*: Mandar: boe
 * Interlingua: {{t|ia|porco}}
 * Irish: {{t+|ga|muc|f}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|couochon|m}}, {{t|roa-jer|bête à saie|f}}, {{t|roa-jer|por|m}}, {{t|roa-jer|gronneux|m}}, {{t|roa-jer|moussieu|m}}, {{t|roa-jer|quétot|m}}
+* {{ttbc|Kaili}}<!-- This is a language group, please use a more specific label: lew for Ledo Kaili, kzf for Da'a Kaili, unz for Unde Kaili, or brs Baras -->: vavu
 * Kannada: {{t+|kn|ಹಂದಿ|tr=handi|sc=Knda}}
 * Karelian: {{t|krl|počči}}
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
@@ -193,13 +192,13 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
-* Lower Sorbian: {{t|dsb|swinja|f}}
 * Luganda: {{t|lg|embizzi}}
 * Macedonian: {{t|mk|свиња|tr=svínja|f}}
 * Malay: {{t+|ms|babi}}, {{t+|ms|khinzir}}
 * Malayalam: {{t+|ml|പന്നി|tr=panni|sc=Mlym}}
 * Maltese: {{t|mt|ħanżir|m}}
 * Maléku Jaíka: {{t|gut|tunhífa}}
+* Mandar: {{t|mdr|boe|sc=Bugi}}
 * Maori: {{t|mi|poaka}}
 * Mazanderani: {{t|mzn|خی}}
 * Mongolian: {{t|mn|гахай|tr=gahaj|sc=Cyrl}}
@@ -219,7 +218,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Romanian: {{t+|ro|porc|m}}
 * Romansch: {{t|rm|portg|m}}, {{t|rm|piertg|m}}, {{t|rm|püerch|m}}, {{t|rm|chucal|m}}
 * Russian: {{t+|ru|свинья|f|tr=svinʹjá}}, {{t+|ru|боров|m|tr=bórov|sc=Cyrl}} {{qualifier|boar}}
-* Sami: [[spiidni]]
+* {{ttbc|Sami}}<!-- Wiktionary considers this a language group; please specify the language more precisely -->: [[spiidni]]
 * Samoan: {{t|sm|pua'a}}
 * Sanskrit: {{t|sa|सूकर|tr=sūkaraḥ|sc=Deva}}
 * Sardinian: {{t|sc|porcu}}
@@ -230,6 +229,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Sinhalese: {{t+|si|ඌරා|tr=ūrā|sc=Sinh}}
 * Slovak: {{t|sk|prasa|n}}, {{t|sk|sviňa|f}}
 * Slovene: {{t+|sl|svinja|f}}, {{t+|sl|prašič|m}}, {{t|sl|pujs|m}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|swinja|f}}
+*: Upper Sorbian: {{t|hsb|swinjo|n}}
 * Spanish: {{t+|es|cerdo|m}}, {{t+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{t|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{t+|es|coche|m}} {{qualifier|Guatemala}}, {{t+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{t|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{t+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{t+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{t+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{t+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{t+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{t+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{t+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{t+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{t+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t|es|tunco|m}} {{qualifier|El Salvador}}
 * Swahili: {{t+|sw|nguruwe}}, {{t+|sw|nguruwe}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
@@ -250,7 +252,6 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Turkmen: {{t|tk|doňuz}}
 * Tuvan: {{t|tyv|хаван|tr=khavan}}
 * Ukrainian: {{t|uk|свиня|f|tr=svynjá}}
-* Upper Sorbian: {{t|hsb|swinjo|n}}
 * Urdu: {{t|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t|ur|سور|m|tr=sū'ar|sc=ur-Arab}}
 * Uyghur: {{t|ug|چوشقا|sc=ug-Arab}}
 * Uzbek: {{t|uz|choʻchka}}
@@ -380,9 +381,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|sdn}}: [[porcu]] {{g|m}}, [[mannale]] {{g|m}}, [[sue]] {{g|f}}
+* {{ttbc|sdn}}: {{t|sdn|porcu|m}}, {{t|sdn|mannale|m}}, {{t|sdn|sue|f}}
 {{trans-mid}}
-* {{ttbc|sdc}}: [[porcu]] {{g|m}}, [[mannale]] {{g|m}}, [[sue]] {{g|f}}
+* {{ttbc|sdc}}: {{t|sdc|porcu|m}}, {{t|sdc|mannale|m}}, {{t|sdc|sue|f}}
 {{trans-bottom}}
 
 =====Descendants=====
