--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -31,6 +31,7 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 {{trans-mid}}
 * Japanese: {{t|ja|傷口に塩を塗る|tr=kizuguchi-ni shio-o nuru|sc=Jpan}}
 * Norwegian: {{t|no|strø salt i såret}}
+* Portuguese: {{t|pt|esfregar sal na ferida}}
 * Romanian: {{t|ro|a pune sare pe rană}}
 * Russian: {{t|ru|сыпать соль на рану|tr=sýpat' sol' na ránu|sc=Cyrl}}
 * Swedish: {{t|sv|strö salt i såren}}
