--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -53,7 +53,7 @@ From {{term|bend|lang=en}}.
 * Romanian: {{t|ro|gârbov}}, {{t+|ro|îndoit}}
 * Russian: {{t+|ru|согнутый|tr=sógnutyj|sc=Cyrl}}, {{t+|ru|изогнутый|tr=izógnutyj|sc=Cyrl}}, {{t+|ru|гнутый|tr=gnútyj|sc=Cyrl}}, {{t+|ru|кривой|tr=krivój|sc=Cyrl}}, {{t+|ru|искривлённый|tr=iskrivljónnyj|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|lùbach}}
-* Spanish: {{t+|es|plegado|m}}, {{t+|es|plegada|f}}
+* Spanish: {{t+|es|plegado}}
 * Swedish: {{t+|sv|böjd}}
 {{trans-bottom}}
 
