--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -221,7 +221,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * {{ttbc|Sami}}<!-- Wiktionary considers this a language group; please specify the language more precisely -->: [[spiidni]]
 * Samoan: {{t|sm|pua'a}}
 * Sanskrit: {{t|sa|सूकर|tr=sūkaraḥ|sc=Deva}}
-* Sardinian: {{t|sc|porcu}}
+* Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}
 * Scottish Gaelic: {{t|gd|muc|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|свиња|f}}
