--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -221,11 +221,12 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * {{ttbc|Sami}}<!-- Wiktionary considers this a language group; please specify the language more precisely -->: [[spiidni]]
 * Samoan: {{t|sm|pua'a}}
 * Sanskrit: {{t|sa|सूकर|tr=sūkaraḥ|sc=Deva}}
-* Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|pocru|m}}
+* Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
 * Scottish Gaelic: {{t|gd|muc|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|свиња|f}}
 *: Roman: {{t|sh|svinja|f}}
+* Sicilian: {{t|scn|porcu|m}}, {{t|scn|poccu|m}}, {{t|scn|maiali|m}}, {{t|scn|majali|m}}
 * Sinhalese: {{t+|si|ඌරා|tr=ūrā|sc=Sinh}}
 * Slovak: {{t|sk|prasa|n}}, {{t|sk|sviňa|f}}
 * Slovene: {{t+|sl|svinja|f}}, {{t+|sl|prašič|m}}, {{t|sl|pujs|m}}
