t+ro:[[monetarism]] ([[WT:EDIT|Assisted]]) <monetarism#25859939>

--- a/en/m/monetarism.720273.wikitext
+++ b/en/m/monetarism.720273.wikitext
@@ -17,6 +17,7 @@ From [[monetary]], from Latin [[monetarius]], from [[moneta#Latin|monēta]]
 * German: {{t|de|Monetarismus|m}}
 {{trans-mid}}
 * Polish: {{t|pl|monetaryzm|m}}
+* Romanian: {{t|ro|monetarism|n}}
 * Serbo-Croatian: {{t|sh|monetarizam|m}}
 {{trans-bottom}}
 
