--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -72,6 +72,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{term/
 * Asturian: {{t|ast|pesu|m}}
 * Basque: {{t|eu|pisu}}
 * Belarusian: {{t|be|вага|f|tr=váha|sc=Cyrl}}
+* Catalan: {{l|ca|pes}}
 * Chinese:
 *: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
 * Czech: {{t|cs|váha|f}}
@@ -82,6 +83,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{term/
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|poids}}
 * Friulian: {{t|fur|pês|m}}
+* Galician: {{t|gl|peso|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n|tr=város}}
 * Hawaiian: {{t|haw|kaumaha}}
@@ -92,19 +94,23 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{term/
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
 * Korean: {{t+|ko|중량|tr=jungnyang|sc=Kore}} ({{t+|ko|重量|sc=Kore}})
 * Latvian: {{t+|lv|svars|m}}
+* Occitan: {{t|oc|pes|m}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
 * Polish: {{t+|pl|waga|f}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
+* Romansch: {{t|rm|paisa|f}}, {{t|rm|peisa|f}}, {{t|rm|pesa|f}}, {{t|rm|pais|m}}
 * Russian: {{t+|ru|вес|m|tr=ves|sc=Cyrl}}
+* Sardinian: {{t|sc|pesu|m}}, {{t|sc|pessu}}
 * Scots: {{t|sco|weicht}}
 * Scottish Gaelic: {{t|gd|cudrom|m}}
-* Sicilian: {{t|scn|pesu|m}}, {{t|scn|pessu}}
+* Sicilian: {{t|scn|pisu|m}}
 * Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
 * Telugu: {{t+|te|భారము|tr=bhāramu|sc=Telu}}, {{t+|te|బరువు|tr=baruvu}}
 * Turkish: {{t+|tr|ağırlık}}
 * Ukrainian: {{t+|uk|вага|f|tr=váha|sc=Cyrl}}
+* Venetian: {{t|vec|pexo|m}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t|vi|重量}})
 {{trans-bottom}}
 
