--- a/en/r/rebounding.802695.wikitext
+++ b/en/r/rebounding.802695.wikitext
@@ -5,6 +5,13 @@
 
 # {{present participle of|rebound}}
 
+===Noun===
+{{en-noun}}
+
+# The act of something that rebounds.
+#: '''1996''', R. W. Sharples, ''Stoics, Epicureans and Sceptics'' (page 138)
+#*: It seems hard to suppose that the collisions and '''reboundings''' of the atoms cancel out the downward movement of everything entirely.
+
 [[de:rebounding]]
 [[fr:rebounding]]
 [[io:rebounding]]
