/* English */ +citations <stoat#25941737>

--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -1,4 +1,5 @@
 ==English==
+[[File:Mustela erminea upright.jpg|right|thumb|A stoat]]
 {{wikipedia}}
 
 ===Pronunciation===
@@ -8,7 +9,16 @@
 ===Noun===
 {{en-noun}}
 
-# ''Mustela erminea'', the [[ermine]] or short-tailed [[weasel]], a [[mustelid]] native to [[Eurasia]] and [[North America]], distinguished from the least weasel by its larger size and longer tail with a prominent black tip.
+# {{taxlink|Mustela erminea|species}}, the [[ermine]] or short-tailed [[weasel]], a [[mustelid]] native to [[Eurasia]] and [[North America]], distinguished from the least weasel by its larger size and longer tail with a prominent black tip.
+#* '''1886''', ''Transactions of the Edinburgh Naturalists' Field Club'', Volume 1, [http://books.google.com.au/books?id=ikRKAAAAYAAJ&q=%22stoat%22%7C%22stoats%22&dq=%22stoat%22%7C%22stoats%22&hl=en&sa=X&ei=4Tk0U63NJYX3lAWaz4H4Cw&redir_esc=y page 135],
+#*: I have never seen '''Stoats''' hunt in packs, but it is certain both Weasels and '''Stoats''' do so.
+#* '''2003''',  John Long, ''Introduced Mammals of the World: Their History, Distribution and Influence'', [http://books.google.com.au/books?id=7YC3cYhGMOcC&pg=PA272&dq=%22stoat%22%7C%22stoats%22&hl=en&sa=X&ei=4Tk0U63NJYX3lAWaz4H4Cw&redir_esc=y#v=onepage&q=%22stoat%22%7C%22stoats%22&f=false page 272],
+#*: In 1953 it was reported that the '''stoat''' had increased to a high population level, but that the weasel introduced at the same time had disappeared (de Vos ''et al.'' 1956).
+#* '''2005''', T. C. R. White, ''Why Does the World Stay Green?: Nutrition and Survival of Plant-eaters'', [http://books.google.com.au/books?id=Zf6pZp20qxEC&pg=PA91&dq=%22stoat%22%7C%22stoats%22&hl=en&sa=X&ei=4Tk0U63NJYX3lAWaz4H4Cw&redir_esc=y#v=onepage&q=%22stoat%22%7C%22stoats%22&f=false page 91],
+#*: European '''stoats''' were long ago introduced to New Zealand (along with ferrets and weasels!) in the mistaken belief that they would control the burgeoning populations of introduced rabbits.
+
+====Synonyms====
+* {{sense|Mustela erminea}} [[ermine]] {{qualifier|especially when in white winter coat}}, [[short-tailed weasel]] {{qualifier|US}}
 
 ====Translations====
 {{trans-see|ermine}}
