/* English */ ===Noun===  {{en-noun|~}}    # {{cx|historical|mostly|plural|lang=en}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]]. <robing#26028752>

--- a/en/r/robing.720156.wikitext
+++ b/en/r/robing.720156.wikitext
@@ -5,6 +5,11 @@
 
 # {{present participle of|robe}}
 
+===Noun===
+{{en-noun|~}}
+
+# {{cx|historical|mostly|plural|lang=en}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]].
+
 ===Anagrams===
 * [[boring#English|boring]]
 * [[orbing#English|orbing]]
