--- a/en/f/forgathering.855452.wikitext
+++ b/en/f/forgathering.855452.wikitext
@@ -1,14 +1,17 @@
 ==English==
 
-===Verb===
-{{head|en}}
-
-# {{present participle of|forgather}}
+===Alternative forms===
+* [[foregathering]]
 
 ===Noun===
 {{en-noun}}
 
-# A gathering together; an assembly.
+# A gathering together; an [[assembly]].
+
+===Verb===
+{{head|en}}
+
+# {{present participle of|forgather}}
 
 [[de:forgathering]]
 [[fr:forgathering]]
