/* Derived terms */ <thing#26090422>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -65,16 +65,17 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * [[everything]]
 * [[here's the thing]]
 * [[nothing]]
+* [[see things]]
 * [[something]]
-* [[swing of things]]
 {{rel-mid3}}
+* [[swing of things]]
 * [[the thing is]]
 * [[thingal]]
 * [[thingamajig]]<!-- various spellings -->
 * [[thinger]]
 * [[thinghood]]
-* [[thingly]]
 {{rel-mid3}}
+* [[thingly]]
 * [[thingness]]
 * [[thingo]]
 * [[thingy]]
