/* English */ ===Noun===  {{en-noun}}    # The act by which something is reaped.  #: ''sowings and '''reapings''''' <reaping#26094222>

--- a/en/r/reaping.720074.wikitext
+++ b/en/r/reaping.720074.wikitext
@@ -5,6 +5,12 @@
 
 # {{present participle of|reap}}
 
+===Noun===
+{{en-noun}}
+
+# The act by which something is reaped.
+#: ''sowings and '''reapings'''''
+
 [[de:reaping]]
 [[fr:reaping]]
 [[kn:reaping]]
