--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -14,7 +14,7 @@ From {{etyl|fr|en}} {{term|mouflon|lang=fr}}, from {{etyl|it|-}} {{term|muflone|
 ===Noun===
 {{en-noun}}
 
-# A [[species]] of wild [[sheep]], {{taxlink|Ovis aries musimon|subspecies}}, endemic to [[Sardinia]] and [[Corsica]]. {{defdate|From 1765-75.}}
+# A [[species]] of wild [[sheep]], {{taxlink|Ovis aries musimon|subspecies|noshow=1}}, endemic to [[Sardinia]] and [[Corsica]]. {{defdate|From 1765-75.}}
 
 ====Translations====
 {{trans-top|sheep}}
@@ -73,6 +73,7 @@ From {{etyl|fr|en}} {{term|mouflon|lang=fr}}, from {{etyl|it|-}} {{term|muflone|
 {{trans-bottom}}
 
 [[Category:en:Sheep]]
+
 
 ----
 
