--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -69,6 +69,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * [[amain#English|amain]], [[Amina#English|Amina]], [[amnia#English|amnia]], [[anima#English|anima]]
 
 [[Category:en:Manias]]
+[[Category:en:Emotions]]
 
 ----
 
