--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*hwistlōną}}
+From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*hwistlōną}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/wɪsl̩/}}, {{IPA|/ʍɪsl̩/}}
@@ -208,6 +208,7 @@
 * Hungarian: {{t+|hu|fütyül}}
 * Interlingua: {{t|ia|sibilar}}
 * Irish: {{t|ga|lig fead}}
+* Italian: {{t|it|fischiare}}
 * Japanese: {{t|ja|口笛を吹く|tr=くちぶえをふく, kuchibue-o fuku}}
 * Jèrriais: {{t|roa-jer|sûfflier}}
 * Khmer: {{t+|km|ហួច|tr=houch|sc=Khmr}}
@@ -220,6 +221,7 @@
 * Russian: {{t+|ru|свистеть|impf|tr=svistét’}}, {{t+|ru|свистнуть|pf|tr=svístnut’}}
 * Scottish Gaelic: {{t|gd|dèan fead}}, {{t|gd|fead}}
 * Serbo-Croatian: {{t|sh|zvižduk|m}}
+* Sicilian: {{t|scn|friscari}}
 * Spanish: {{t+|es|silbar}}, {{t+|es|chiflar}}, {{t+|es|pitar}}
 * Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t+|sv|vissla}}
