--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -160,7 +160,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|ia}}
 * {{trreq|ie}}
 * Irish: {{t|ga|simplí}}
-* Italian: {{t+|it|semplice}}
+* Italian: {{t+|it|semplice}}, {{t+|it|mero|m}}
 * Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
 * {{trreq|jv}}
 * Jèrriais: {{t|roa-jer|sîmpl'ye|m|f}}
