--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -20,7 +20,9 @@ From {{etyl|la|it}} {{term|abacus||counting board|lang=la}}, from {{etyl|grc|it}
 {{it-noun|m}}
 
 # [[abacus]], [[plinth]], [[multiplication-table]]
-
+===Synonyms===
+* [[pallottoliere]]
+* [[tavola pitagorica]]
 ----
 
 ==Latin==
