t+fr:[[délai de mise en œuvre]] ([[WT:EDIT|Assisted]]) <lead time#26190441>

--- a/en/l/lead time.775552.wikitext
+++ b/en/l/lead time.775552.wikitext
@@ -10,6 +10,7 @@
 {{trans-top|the amount of time between the initiation of some process and its completion}}
 * Finnish: {{t|fi|läpimenoaika}}
 {{trans-mid}}
+* French: {{t|fr|délai de mise en œuvre|m}}
 * Swedish: {{t|sv|ledtid|c}}
 {{trans-bottom}}
 
