/* Translations */ <public school#26213072>

--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -44,7 +44,7 @@ From {{term|public|lang=en}} (in the English sense, "open to all members of a co
 * Norwegian: {{t|no|privatskole|m}}
 *: Nynorsk: {{t|nn|privatskule|m}}
 {{trans-mid}}
-* Portuguese: {{t|pt|escola particular}}
+* Portuguese: {{t|pt|[[escola]] [[particular]]|f}}
 * Serbo-Croatian: {{t|sh|приватна школа|f|tr=privatna škola|sc=Cyrl}}
 {{trans-bottom}}
 
@@ -52,7 +52,7 @@ From {{term|public|lang=en}} (in the English sense, "open to all members of a co
 * Finnish: {{t+|fi|yleinen}} {{t+|fi|koulu}}, {{t+|fi|peruskoulu}}
 * Khmer: {{t|km|សាលារដ្ឋ|tr=sala roth|sc=Khmr}}, {{t|km|សាលាសាធារណៈ|tr=sala satheraknak|sc=Khmr}}
 {{trans-mid}}
-* Portuguese: {{t|pt|escola pública}}
+* Portuguese: {{t|pt|[[escola]] [[pública]]|f}}
 {{trans-bottom}}
 
 {{checktrans-top}}
