--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}}, {{t|ja|立ち会う|tr=たちあう, tachiau}}
 * Polish: {{t+|pl|uczęszczać}}, {{t+|pl|brać udział}}
-* Portuguese: {{t+|pt|assistir}}, {{t|pt|participar em}}, {{t|pt|estar presente em}}, {{t+|pt|frequentar}}, {{t+|pt|cursar}}
+* Portuguese: {{t+|pt|assistir}}, {{t|pt|[[participar]] [[de]]}}, {{t|pt|[[estar]] [[presente]] [[em]]}}
 * Russian: {{t+|ru|посещать|impf|tr=poseščátʹ}}, {{t+|ru|присутствовать|impf|tr=prisútstvovatʹ}}
 * Spanish: {{t+|es|asistir}}
 * Swedish: {{t+|sv|närvara}}, {{t+|sv|delta}}
