--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -48,12 +48,13 @@
 * West Frisian: {{t|fy|West-Frysk}}
 {{trans-bottom}}
 
-{{checktrans}}
+{{checktrans-top}}
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
 * {{ttbc|fr}}: [[frison]] {{g|m}}
 * {{ttbc|is}}: [[frísneska]] {{g|f}}
 * {{ttbc|es}}: [[frisón]] {{g|m}}
 * {{ttbc|sv}}: [[frisiska]] {{g|c}}
+{{checktrans-bottom}}
 
 ===See also===
 * {{pedialite|West Frisian language}}
