--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -128,6 +128,7 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 * Catalan: {{t|ca|espècie|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|种|sc=Hani}}
+* Chinook Jargon: {{t|chn|种}}
 * Czech: {{t+|cs|druh|m}}
 * Danish: {{t+|da|art|c}}
 * Finnish: {{t+|fi|laji}}
