t+ro:[[fracție]] ([[WT:EDIT|Assisted]]) <fraction#26274333>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -109,6 +109,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 * Persian: {{t+|fa|کسر}}
 * Polish: {{t+|pl|ułamek|m}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
+* Romanian: {{t+|ro|fracție|f}}
 * Russian: {{t+|ru|дробь|f}}
 * Scottish Gaelic: {{t|gd|bloigh|f}}
 * Serbo-Croatian: {{t|sh|rázlomak|m}}
