--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -122,6 +122,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 {{trans-top|chemistry: component separated by fractionation}}
 * Finnish: {{t+|fi|jae}}
 {{trans-mid}}
+* Romanian: {{t+|ro|fracțiune|f}}
 * Russian: {{t+|ru|фракция|f|sc=Cyrl|tr=frákcija}}
 {{trans-bottom}}
 
