t+fr:[[retour]] ([[WT:EDIT|Assisted]]) <second coming#26274937>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -18,6 +18,7 @@
 {{trans-top|the return of Jesus Christ}}
 * Finnish: {{t|fi|toinen tuleminen}}
 {{trans-mid}}
+* French: {{t+|fr|retour}}
 * Greek: {{t|el|Δευτέρα Παρουσία}}
 * Portuguese: {{t|pt|segunda vinda|f}}
 {{trans-bottom}}
