--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -8,13 +8,13 @@
 * [[Pridnestrovie]]
 
 ===Etymology===
-Literally "beyond the river [[Dniester]]".
+Literally "beyond the river [[Dniester]]". {{etystub|lang=en}}
 
 ===Proper noun===
 {{en-proper noun}}
 
 # {{context|historical|lang=en}} A [[governorate]] of [[Romania]] during [[World War II]], established in 1941 and captured by Soviet forces in 1944.
-# An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]]. It is the only part of Moldova in which the [[Cyrillic alphabet]] is official, while the [[Latin alphabet]] is generally "restricted".
+# An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]].
 
 {{-}}
 
@@ -71,7 +71,7 @@ Literally "beyond the river [[Dniester]]".
 {{trans-bottom}}
 
 [[Category:en:Place names]]
-[[Category:en:Disputed territories]]
+
 ----
 
 ==Asturian==
