Reverted edits by [[Special:Contributions/24.157.45.30|24.157.45.30]]. If you think this rollback is in error, please leave a message on my talk page. <consume#26314692>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -163,7 +163,7 @@ From {{etyl|fro|en}} {{term|consumer|lang=fro}}, from {{etyl|la|en}} {{term|cons
 
 ----
 
-==Pvc middle school==
+==Spanish==
 
 ===Verb===
 {{es-verb-form|consumir}}
