/* Noun */ # The mouth and throat; so called as being the organs of whistling.  #* Walton  #*: Let's drink the other cup to wet our '''whistles'''. <whistle#26320261>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -24,6 +24,9 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 # {{context|Cockney rhyming slang|lang=en}} A [[suit]] (from ''whistle and flute'').
 #* '''2005''', Wally Payne, ''A Minority of One: A Monkey's Tale Continued''
 #*: We soldiers changed into our No.1 dress uniforms, Sid into his best '''whistle''' and we set off for the church.
+# The mouth and throat; so called as being the organs of whistling.
+#* Walton
+#*: Let's drink the other cup to wet our '''whistles'''.
 
 ====Derived terms====
 {{rel-top3|Terms derived from the noun ''whistle''}}
