Fixing mismatched {{[[Template:bottom|bottom]]}}s <月#26322175>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -108,7 +108,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|無月|tr=[[むげつ]], ''[[mugetsu]]''}}: moonless sky
 * {{l|ja|月夜|tr=[[げつや]], ''[[getsuya]]''; [[つきよ]], ''[[tsukiyo]]''; [[つくよ]], ''[[tsukuyo]]''}}: a [[moonlit]] night; [[moonlight]]
 * {{l|ja|月読}}, {{l|ja|月夜見|tr=[[つくよみ]], ''[[Tsukuyomi]]''; [[つきよみ]], ''[[Tsukiyomi]]''}}: the Japanese god of the moon
-{{bottom}}
+{{der-bottom}}
 
 ===See also===
 {{der-top|Japanese months}}
@@ -125,7 +125,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|十月|tr=[[じゅうがつ]], ''[[jūgatsu]]''}}: [[October]]
 * {{l|ja|十一月|tr=[[じゅういちがつ]], ''[[jūichigatsu]]''}}: [[November]]
 * {{l|ja|十二月|tr=[[じゅうにがつ]], ''[[jūnigatsu ]]''}}: [[December]]
-{{bottom}}
+{{der-bottom}}
 
 ===Noun===
 {{ja-noun|つき}}
