t+dsb:[[chyliś]] ([[WT:EDIT|Assisted]]) <bend#26335139>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -100,7 +100,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Scottish Gaelic: {{t|gd|crom}}, {{t|gd|lùb}}
 * Slovene: {{t|sl|upogniti}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|gibaś|impf}}
+*: Lower Sorbian: {{t|dsb|gibaś|impf}}, {{t|dsb|chyliś|impf}}
 * Spanish: {{t+|es|doblar}}, {{t|es|curvar}}
 * Swahili: {{t+|sw|pinda}}, {{t+|sw|kunja}}
 * Swedish: {{t+|sv|böja}}
