--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -31,7 +31,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * French: {{t+|fr|mieux vaut tard que jamais}}
 {{trans-mid}}
 * German: {{t|de|besser spät als nie}}
-* {{trreq|he}}
+* Hebrew: {{t|he|עדיף מאוחר מאשר לעולם לא|sc=Hebr}}
 * Hungarian: {{t+|hu|jobb későn, mint soha}}
 * Italian: {{t|it|meglio tardi che mai}}
 * Japanese: {{t|ja|遅くてもやらないよりまし|tr=おそくてもやらないよりまし, osokutemo yaranai yori mashi|sc=Jpan}} <!-- to check {{t|ja|良いことよりも遅く|tr=よいことよりもおそく, yoi koto-yori-mo osoku|sc=Jpan}} -->
