/* Translingual */ new sense <CD#26356346>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -1,22 +1,33 @@
 {{also|C.D.}}
 ==Translingual==
 
-===Alternative forms===
-* {{sense|roman numeral}} [[cd]]
+===Etymology 1===
 
-===Symbol===
+====Symbol====
 {{head|mul|symbol}}
 
 # The [[ISO]] 3166-1 two-letter (alpha-2) code for [[Democratic Republic of the Congo]].
 
-===Number===
+===Etymology 2===
+
+====Alternative forms====
+* {{cx|rare|lang=mul}} [[cd]]
+
+====Number====
 {{head|mul|number}}
 
 # A Roman numeral representing [[four hundred]] ([[400]]).
 
-====See also====
+=====See also=====
 * Previous: [[CCCXCIX]] ([[three hundred and ninety-nine]], [[399]])
 * Next: [[CDI]] ([[four hundred and one]], [[401]])
+
+===Etymology 3===
+
+====Initialism====
+{{head|mul|initialism}}
+
+# [[Corps Diplomatique]], [[diplomatic corps]] {{gloss|collective body of foreign diplomats accredited to a particular country or body}}
 
 [[Category:ISO 3166-1]]
 [[Category:Roman numerals]]
