--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -142,7 +142,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Polish: {{t+|pl|rzecz|f}}
 * Portuguese: {{t+|pt|coisa|f}}
-* Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}
+* Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f|tr=veščʹ|sc=Cyrl}}, {{t+|ru|нечто|n|tr=néčto|sc=Cyrl}}, {{t+|ru|предмет|m|tr=predmét|sc=Cyrl}}
 * Sanskrit: {{t|sa|वस्तु|m|tr=vastu}}
 * Scottish Gaelic: {{t|gd|rud|m}}
