--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -75,6 +75,9 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Malay: {{t|ms|wisel}}
 * Maltese: {{t|mt|suffara|f}}
 * Meru: {{t|mer|thirimbi}}
+* Norwegian:
+*: Bokmål: {{t+|nb|fløyte|m|f}}
+*: Nynorsk: {{t|nn|fløyte|f}}
 * Polish: {{t+|pl|gwizdek|m}}
 * Portuguese: {{t+|pt|apito|m}}
 * Romanian: {{t+|ro|fluier|n}}
