--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -476,6 +476,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 *: Bokmål: {{t|nb|slag|n}}
 *: Nynorsk: {{t|nn|slag|n}}
 * Portuguese: {{t+|pt|golpe|m}}
+* Romansch: {{t|rm|frida|f}}, {{t|rm|freida|f}}, {{t|rm|cuolp|m}}
 * Russian: {{t+|ru|удар|m|tr=udár}}
 * Scottish Gaelic: {{t|gd|beum|m}}, {{t|gd|bualadh|m}}, {{t|gd|buille|f}}
 * Spanish: {{t+|es|golpe}}
