t+cmn:[[鼻中隔]] t+uk:[[носова перетинка]] t+tr:[[burun bölmesi]] t+th:[[ผนังกั้นโพรงจมูก]] t+sh:[[носна преграда]] t+fi:[[nenän_väliseinä]] t+pl:[[przegroda nosowa]] t+nds-de:[[neestw... <nasal septum#26384238>

--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -10,16 +10,32 @@
 
 ====Translations====
 {{trans-top|septum in the nose}}
+* Arabic: {{t|ar|حاجز الأنف|sc=Arab}}
+* Azeri: {{t|az|burun arakəsmə sümüyü}}
+* Chinese:
+*: Mandarin: {{t+|cmn|鼻中隔|tr=bízhōnggé|sc=Hani}}
 * Czech: {{t|cs|nosní přepážka|f}}
+* Dutch: {{t|nl|neustussenschot|n}}
+* Finnish: {{t|fi|nenän_väliseinä}}
 * French: {{t+|fr|cloison|f}}
+* Galician: {{t|gl|tabique nasal|m}}
 * German: {{t|de|Nasenscheidewand|f}}
 * Greek: {{t|el|ρινικό διάφραγμα|n|tr=rinikó diáfragma|sc=Grek}}
+* Hebrew: {{t|he|מחיצת האף|sc=Hebr}}
+* Hungarian: {{t+|hu|orrsövény}}
 {{trans-mid}}
 * Italian: {{t|it|setto|m}}
 * Japanese: {{t|ja|鼻中隔|tr=bichūkaku|sc=Jpan}}
+* Low German:
+*: German Low German: {{t|nds-de|neestwüschenwand}}
 * Maori: {{t|mi|taunga}}
+* Persian: {{t|fa|تیغه بینی|sc=fa-Arab}}
+* Polish: {{t+|pl|przegroda nosowa}}
 * Portuguese: {{t|pt|septo nasal|m}}
 * Spanish: {{t+|es|tabique nasal|m}}
+* Thai: {{t|th|ผนังกั้นโพรงจมูก|tr=P̄hnạng kận phorng cmūk|sc=Thai}}
+* Turkish: {{t|tr|burun bölmesi}}
+* Ukrainian: {{t|uk|носова перетинка|tr=nosova peretinka|sc=Cyrl}}
 {{trans-bottom}}
 
 [[hu:nasal septum]]
