--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -15,6 +15,7 @@
 === Translations ===
 {{trans-top|CD-ROM}}
 * Esperanto: {{t|eo|KD-NLM}}
+{{trans-mid}}
 * Finnish: {{t|fi|CD-ROM-levy}}, {{t|fi|CD-ROM}}
 {{trans-bottom}}
 
