--- a/en/m/mind-blowing.720297.wikitext
+++ b/en/m/mind-blowing.720297.wikitext
@@ -6,6 +6,9 @@
 # [[hallucinogenic]]
 # having an overwhelming affect on the [[imagination]]; [[mind-boggling]]
 
+====Derived terms====
+* [[mind-blowingly]]
+
 ====See also====
 * [[blow someone's mind]]
 
