--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -33,7 +33,7 @@ From {{etyl|la|es}} ''[[parens]], parentis''
 # [[relative]], [[relation]] {{gloss|member of one's family}}
 
 ====Usage notes====
-* {{es-note-false-friend|padre|en=parent}}
+* {{es-note-false-friend|padre|es2=madre|en=parent}}
 
 ====Related terms====
 * [[parir]]
