--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -6,7 +6,7 @@
 From {{etyl|fro|en}} {{term|esquirel|lang=fro}}, {{term|escurel|lang=fro}} (whence French {{term|écureuil|lang=fr}}), from {{etyl|VL.|en}} {{term|scuriolus|lang=la}}, diminutive of {{term|scurius|lang=la}}, variant of {{etyl|la|en}} {{term|sciurus|lang=la}}, from {{etyl|grc|en}} {{term|σκίουρος|lang=grc|sc=polytonic|tr=skiouros}}. Displaced native Middle English {{term|aquerne|lang=enm}}, from Old English {{term|acweorna|lang=ang}}.
 
 ===Pronunciation===
-* {{a|RP|Aus|UK}} {{IPA|/ˈskwɜːl/|/ˈskwɪɹ.əl/}}
+* {{a|RP|Aus|UK}} {{IPA|/ˈskwɪɹ.əl/}}
 * {{a|Canada|US}} {{IPA|/ˈskwɝl/|/ˈskwɝ.əl/}}
 * {{audio|En-ca-squirrel.ogg|Audio (CA)|lang=en}}
 * {{rhymes|ɜː(ɹ)l|ɪɹəl}}
