t+lld:[[peis]] ([[WT:EDIT|Assisted]]) <weight#26561027>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -93,6 +93,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{term/
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
 * Korean: {{t+|ko|중량|tr=jungnyang|sc=Kore}} ({{t+|ko|重量|sc=Kore}})
+* Ladin: {{t|lld|peis|m}}
 * Latvian: {{t+|lv|svars|m}}
 * Occitan: {{t|oc|pes|m}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
