--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -130,6 +130,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Kazakh: {{t|kk|нәрсе|tr=närsä|sc=Cyrl}}
 * Khmer: {{t+|km|របស់|tr=rɔbɑh|sc=Khmr}}
 * Korean: {{t+|ko|물건|tr=mulgeon|sc=Kore}}
+* Ladin: {{t|lld|cossa|f}}
 * Lao: {{t|lo|ສິ່ງ|tr=sing|sc=Laoo}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
 * Latvian: {{t+|lv|lieta}}
