t+tr:[[o zaman]] ([[WT:EDIT|Assisted]]) <then#26580317>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -111,7 +111,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Swedish: {{t+|sv|då}}
 * Telugu: {{t+|te|అప్పుడు|tr=appuDu}}
 * Thai: {{t|th|ในตอนนั้น|tr=nai dton-nán|sc=Thai}}
-* Turkish: {{t+|tr|sonra}}
+* Turkish: {{t+|tr|sonra}}, {{t|tr|o zaman}}
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تب|tr=tab|sc=ur-Arab}}
 * Vietnamese: {{t|vi|khi ấy}}
