--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -2,11 +2,16 @@
 ==English==
 
 ===Etymology===
-The prefix [[mini-]] (from Latin) used as a noun.
+From the prefix [[mini-]] (from Latin).
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈmɪ.ni/}} (singular)
 * {{a|UK}} {{IPA|/ˈmaɪnaɪ/}} (plural)
+
+===Adjective===
+{{en-adj}}
+
+# [[miniature|Miniature]], [[tiny]], [[small]].
 
 ===Noun===
 {{en-noun}}
