--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -112,7 +112,9 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 * Macedonian: {{t|mk|вид|m|tr=vid|sc=Cyrl}}
 {{trans-mid}}
 * Malay: {{t|ms|spesies}}
-* Norwegian: {{t+|no|art|m}}
+* Norwegian: 
+*: Bokmål: {{t+|nb|art|m|f}}
+*: Nynorsk: {{t|nn|art|m|f}}
 * Polish: {{t+|pl|gatunek|m}}
 * Portuguese: {{t+|pt|espécie}}
 * Romanian: {{t+|ro|specie}}
@@ -138,6 +140,9 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 {{trans-mid}}
 * Macedonian: {{t|mk|вид|m|tr=vid}}, {{t|mk|вид|m|tr=vid|sc=Cyrl}}
 * Malay: {{t|ms|spesies}}, {{t|ms|jenis}}
+* Norwegian:
+*: Bokmål: {{t+|nb|art|m|f}}
+*: Nynorsk: {{t|nn|art|m|f}}
 * Polish: {{t+|pl|gatunek|m}}
 * Portuguese: {{t+|pt|espécie}}
 * Russian: {{t+|ru|вид|tr=vid}}
