--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -46,6 +46,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 
 ====Related terms====
 * [[seizure]]
+* [[be seized of]]
 
 ====Translations====
 {{trans-top|grab}}
