--- a/en/q/Qiana.4314.wikitext
+++ b/en/q/Qiana.4314.wikitext
@@ -1,11 +1,10 @@
 ==English==
 
 ===Proper noun===
-{{en-proper noun}} &trade;
+{{en-proper noun}} 
 
 # A silky [[material]] made from [[nylon]] fibers.
 
-[[Category:English trademarks]]
 [[Category:English words containing Q not followed by U]]
 
 [[sr:Qiana]]
