Reverted edits by [[Special:Contributions/82.28.53.86|82.28.53.86]]. If you think this rollback is in error, please leave a message on my talk page. <bent#26637684>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -30,7 +30,8 @@ From {{term|bend|lang=en}}.
 #: ''Man, I am so '''bent''' right now!''
 
 =====Synonyms=====
-* Bobby's nose
+* {{sense|folded}} [[crooked]]
+* {{sense|homosexual}} [[queer]]
 
 =====Derived terms=====
 * [[bent as a nine-bob note]]
