edit section 2.1 ([[WT:EDIT|Assisted]]) <月#26642048>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -33,7 +33,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=[[jyut6]]|y=[[yut6]]}}
+{{yue-hanzi|jyut=jyut6|y=yut6}}
 
 # {{defn|lang=yue|sort=月00}}
 
