--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -10,3 +10,6 @@
 # {{context|baseball|lang=en}} A [[ground ball]] that hops along the [[field]] instead of [[rolling]].
 #: ''The first baseman misplays the '''bunny hop''', so all runners are safe.''
 # An exercise whereby the person crouches on their haunches and then extends their legs and springs up, jumping vertically into the air like a rabbit hopping.
+
+====Related terms====
+* [[bunnyhopping]]
