--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -31,7 +31,7 @@ From {{term|bend|lang=en}}.
 
 =====Synonyms=====
 * {{sense|folded}} [[crooked]]
-* {{sense|homosexual}} [[Bobby]]
+* {{sense|homosexual}} [[queer]]
 
 =====Derived terms=====
 * [[bent as a nine-bob note]]
