--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -24,6 +24,17 @@ Not productive, and rarely used; {{term|-ana|lang=en}} and {{term|-ia|lang=en}} 
 
 ----
 
+==Dutch==
+
+===Suffix===
+{{head|nl|suffix}}
+
+# {{l|nl|-ica}}, female of {{l|nl|-icus}}
+
+{{suffixsee|nl}}
+
+----
+
 ==Catalan==
 
 ===Suffix===
