t+he:[[מודעה]] t-balance ([[WT:EDIT|Assisted]]) <advertisement#26673954>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -115,10 +115,11 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * French: {{t+|fr|avis|m}}, {{t+|fr|annonce|f}}
 * German: {{t+|de|Anzeige|f}}, {{t+|de|Bekanntmachung|f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}, {{t+|el|αγγελία|f|tr=agelía}}
+* Hebrew: {{t|he|מוֹדָעָה|f|tr=moda'a|sc=Hebr}}
 * Kurdish:
 *: Sorani: {{t|ku|بۆزانین}}
-* Kyrgyz: {{t+|ky|жарыя}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|жарыя}}
 * Macedonian: {{t|mk|оглас|m|tr=óglas}}
 * Polish: {{t+|pl|ogłoszenie|n}}, {{t+|pl|anons|m}}
 * Portuguese: {{t|pt|edital|m}}
