--- a/en/m/Maneblusser.4388.wikitext
+++ b/en/m/Maneblusser.4388.wikitext
@@ -9,5 +9,5 @@ From {{compound|maan|t1=moon|blusser|t2=extinguisher|lang=nl}}, after an inciden
 ===Noun===
 {{nl-noun|m|-s|Maneblussertje}}
 
-# {{context|humorous|Flemish|lang=nl}} An inhabitant of the city of [[Mechelen]], [[Belgium]].
+# {{context|humorous|Belgium|lang=nl}} An inhabitant of the city of [[Mechelen]], [[Belgium]].
 {{attention|nl|check caps, gender, inflection}}
