--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -29,6 +29,7 @@
 * Dutch: {{t|nl|Amerikaans-Engels}}
 * Finnish: {{t+|fi|amerikanenglanti}}
 * French: {{t+|fr|anglais américain|m}}
+* Galician: {{t+|gl|inglés estadounidense|m}}, {{t+|gl|inglés americano|m}}
 * German: {{t|de|Amerikanisches Englisch}}
 * Hungarian: {{t+|hu|amerikai angol}}
 * Japanese: {{t|ja|アメリカ英語|tr=Amerika Eigo}}, {{t|ja|米英語|tr=Bei-Eigo}}, {{t|ja|米語|tr=Beigo}}
@@ -40,7 +41,7 @@
 * Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t+|pt|inglês americano|m}}
 * Russian: {{t|ru|американский английский|m|tr=amerikánskij anglíjskij}}
-* Spanish: {{t|es|ingles americano|m}}
+* Spanish: {{t+|es|inglés estadounidense|m}}, {{t+|es|inglés americano|m}}
 * Swahili: {{t|sw|Kiingereza cha Kimarekani}}
 * Swedish: {{t+|sv|amerikansk engelska}}
 * Turkish: {{t+|tr|Amerikan İngilizcesi}}, {{t+|tr|Amerikanca}}
