--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -93,8 +93,12 @@ From {{etyl|fr|da}} {{term|dame||lady|lang=fr}}.
 
 ==Dutch==
 
+===Etymology===
+From {{etyl|fro|nl}}, from {{etyl|la|nl}} {{term|domina|lang=la}}
+
 ===Pronunciation===
 * {{audio|Nl-dame.ogg|Audio|lang=nl}}
+* {{hyphenation|da|me|lang=nl}}
 
 ===Noun===
 {{nl-noun|f|-s|dametje}}
