/* Anagrams */Fixing [[Wikipedia:Disambiguation pages with links|links to disambiguation pages]] using [[Project:AWB|AWB]] <anaclitism#26685846>

--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -21,4 +21,4 @@
 ===Anagrams===
 * [[talismanic#English|talismanic]]
 
-[[Category:English nouns ending in "-ism"]]
+[[Category:English words suffixed with -ism]]
