t+mi:[[pūawhe]] ([[WT:EDIT|Assisted]]) <blow#26734334>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -219,6 +219,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 {{trans-mid}}
 * Korean: {{t+|ko|불리다|tr=bullida|sc=Kore}}
 * Macedonian: {{t|mk|се вее|tr=se vée}}
+* Maori: {{t|mi|pūawhe}}
 * Portuguese: {{t+|pt|[[ser]] [[soprado]]}}
 * Romanian: {{t|ro|fi purtat}}
 * Vietnamese: {{t+|vi|bay}}
