--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -13,9 +13,6 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ===Han character===
 {{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)|ids=⿵[[冂]][[二]]}}
 
-# [[moon]]
-# [[month]], [[traditional]] [[Chinese]] [[lunar]] [[month]]
-# {{context|used to form names of months|lang=mul}}
 # KangXi radical 74 [[Index:Chinese radical/月|月]]
 
 ====Derived characters====
@@ -30,26 +27,105 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[月]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=jyut6|y=yut6}}
+===Pronunciation===
+{{zh-pron
+|m=yuè
+|c=jyut6
+|h=poj=nyet8|gd=ngiet<sup>8</sup>; nget<sup>8</sup> [Meixian, Dongguan]|hpy=ngiad6
+|mn=gua̍t/gue̍h/ge̍h
+|w=5hhyq
+|mc=y
+|oc=y
+|ma=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=月00}}
+===Noun===
+{{zh-noun}}
 
-----
+# [[moon]]
+# [[month]]
 
-==Hakka==
+====Synonyms====
+* {{sense|moon}} {{zh-l|月亮}}
 
-===Hanzi===
-{{hak-hanzi|poj=nyet8|gd=ngiet<sup>8</sup>; nget<sup>8</sup> [Meixian, Dongguan]|hpy=ngiad6}}
+====Compounds====
+{{top4}}
+* [[月白]]
+* [[月白风情]]
+* [[月半]]
+* [[月报]]
+* [[月饼]]
+* [[月初]]
+* [[月底]]
+* [[月度]]
+* [[月份]], [[月份儿]]
+* [[月份牌]], [[月份牌儿]]
+* [[月俸]]
+* [[月宫]]
+* [[月光]]
+{{mid4}}
+* [[月华]]
+* [[月季]]
+* [[月经]]
+* [[月刊]]
+* [[月蓝]]
+* [[月老]]
+* [[月历]]
+* [[月利]]
+* [[月例]]
+* [[月亮]]
+* [[月亮地儿]]
+* [[月亮门儿]]
+* [[月令]]
+{{mid4}}
+* [[月门]]
+* [[月末]]
+* [[月偏食]]
+* [[月票]]
+* [[月琴]]
+* [[月球]]
+* [[月球仪]]
+* [[月全食]]
+* [[月入]]
+* [[月色]]
+* [[月食]]
+* [[月台]]
+* [[月台票]]
+{{mid4}}
+* [[月尾]]
+* [[月息]]
+* [[月下老人]]
+* [[月相]]
+* [[月薪]]
+* [[月牙]], [[月牙儿]], [[月芽]], [[月芽儿]]
+* [[月夜]]
+* [[月中]]
+* [[月终]]
+* [[月子]]
+* [[月子病]]
+* [[新月形面包]]
+{{bottom}}
 
-# {{defn|lang=hak|sort=月00}}
+===See also===
+''Months of the year''
+* [[一月]] yīyuè - January
+* [[二月]] èryuè - February
+* [[三月]] sānyuè - March
+* [[四月]] sìyuè - April
+* [[五月]] wŭyuè - May
+* [[六月]] liùyuè - June
+* [[七月]] qīyuè - July
+* [[八月]] bāyuè - August
+* [[九月]] jiŭyuè - September
+* [[十月]] shíyuè - October
+* [[十一月]] shíyīyuè - November
+* [[十二月]] shíèryuè - December
 
-====References====
-*[http://www.chinalanguage.com/dictionaries/?mode=view&view=chardict&query=%E6%9C%88 CCDICT (Chineselanguage.org)]
-*[http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=28085&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
-*Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
+[[Category:Beginning Mandarin|yue4]]
 
 ----
 
@@ -180,120 +256,6 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 # {{defn|lang=ko|sort=月00}}
 
 [[Category:ko:Days of the week|월]]
-
-----
-
-==Mandarin==
-{{zh-hanzi-box|[[月]]}}
-
-===Pronunciation===
-{{Pinyin-IPA|yuè|a=zh-yuè.ogg}}
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yuè]] ([[yue4]])|wg=yüeh<sup>4</sup>}}
-
-===Noun===
-{{cmn-noun|ts|pin=yuè|pint=yue4}}
-
-# [[moon]]
-# [[month]]
-
-====Compounds====
-{{top4}}
-* [[月白]]
-* [[月白风情]]
-* [[月半]]
-* [[月报]]
-* [[月饼]]
-* [[月初]]
-* [[月底]]
-* [[月度]]
-* [[月份]], [[月份儿]]
-* [[月份牌]], [[月份牌儿]]
-* [[月俸]]
-* [[月宫]]
-* [[月光]]
-{{mid4}}
-* [[月华]]
-* [[月季]]
-* [[月经]]
-* [[月刊]]
-* [[月蓝]]
-* [[月老]]
-* [[月历]]
-* [[月利]]
-* [[月例]]
-* [[月亮]]
-* [[月亮地儿]]
-* [[月亮门儿]]
-* [[月令]]
-{{mid4}}
-* [[月门]]
-* [[月末]]
-* [[月偏食]]
-* [[月票]]
-* [[月琴]]
-* [[月球]]
-* [[月球仪]]
-* [[月全食]]
-* [[月入]]
-* [[月色]]
-* [[月食]]
-* [[月台]]
-* [[月台票]]
-{{mid4}}
-* [[月尾]]
-* [[月息]]
-* [[月下老人]]
-* [[月相]]
-* [[月薪]]
-* [[月牙]], [[月牙儿]], [[月芽]], [[月芽儿]]
-* [[月夜]]
-* [[月中]]
-* [[月终]]
-* [[月子]]
-* [[月子病]]
-* [[新月形面包]]
-{{bottom}}
-
-=====Months of the year=====
-{{rfc-header|Months of the year|lang=cmn}}
-* [[一月]] yīyuè - January
-* [[二月]] èryuè - February
-* [[三月]] sānyuè - March
-* [[四月]] sìyuè - April
-* [[五月]] wŭyuè - May
-* [[六月]] liùyuè - June
-* [[七月]] qīyuè - July
-* [[八月]] bāyuè - August
-* [[九月]] jiŭyuè - September
-* [[十月]] shíyuè - October
-* [[十一月]] shíyīyuè - November
-* [[十二月]] shíèryuè - December
-
-[[Category:Mandarin entries with audio links|yue4]]
-[[Category:Beginning Mandarin|yue4]]
-
-----
-
-==Middle Chinese==
-
-===Han character===
-'''月''' (*ngiuæt)<!--asterisk signifies that this character appears more than four times in the Tang Dynasty corpus of literature-->
-
-# {{defn|lang=ltc|sort=月00}}
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|poj=|tlpa=gua̍t (guat<sup>8</sup>), gue̍h (gueh<sup>8</sup>), ge̍h (geh<sup>8</sup>)}}
-
-# {{defn|lang=nan|sort=月00}}
-
-====References====
-*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=811&curpage=1&sample=%E6%9C%88&radiobutton=1&querytarget=1&limit=20&pagenum=4&rowcount=68 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
