--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -36,7 +36,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 |c=jyut6
 |h=poj=nyet8|gd=ngiet<sup>8</sup>; nget<sup>8</sup> [Meixian, Dongguan]|hpy=ngiad6
 |mn=gua̍t/gue̍h/ge̍h
-|w=5hhyq
+|w=5hhyq,5hhioq
 |mc=y
 |oc=y
 |ma=y
