t+it:[[sbancare]] t+it:[[fare una fortuna]] ([[WT:EDIT|Assisted]]) <make a killing#26788854>

--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -20,6 +20,7 @@
 * French: {{t+|fr|toucher le jackpot}}
 * German: {{t|de|den großen Reibach machen}}, {{t|de|Reibach machen}}
 {{trans-mid}}
+* Italian: {{t|it|sbancare}}, {{t|it|fare una fortuna}}
 * Romanian: {{t|ro|a da lovitura}}
 * Russian: {{t|ru|грести деньги лопатой}}
 * Spanish: {{t|es|hacer su agosto}}, {{t|es|hacerse la América}}
