t+it:[[mettere il dito nella piaga]] ([[WT:EDIT|Assisted]]) <rub salt in the wound#26790354>

--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -29,6 +29,7 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 * French: {{t+|fr|remuer le couteau dans la plaie}}
 * German: {{t|de|Finger auf die Wunde legen}}
 {{trans-mid}}
+* Italian: {{t|it|mettere il dito nella piaga}}
 * Japanese: {{t|ja|傷口に塩を塗る|tr=kizuguchi-ni shio-o nuru|sc=Jpan}}
 * Norwegian: {{t|no|strø salt i såret}}
 * Portuguese: {{t|pt|esfregar sal na ferida}}
