t+io:[[itere]] ([[WT:EDIT|Assisted]]) <again#26830545>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -121,7 +121,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Hindi: {{t|hi|फिर|tr=phir}}, {{t|hi|फिर से|tr=phir se|sc=Deva}}, {{t|hi|दुबारा|tr=dubārā|sc=Deva}}
 * Hungarian: {{t+|hu|újra}}, {{t+|hu|megint}}, {{t+|hu|ismét}}
 * Icelandic: {{t+|is|aftur}}, {{t|is|á ný}}
-* Ido: {{t|io|ankore un foyo}}, {{t+|io|ankorfoye}}
+* Ido: {{t|io|ankore un foyo}}, {{t+|io|ankorfoye}}, {{t+|io|itere}}
 * Indonesian: {{t+|id|lagi}}
 * Interlingua: {{t|ia|de novo}}
 * Irish: {{t+|ga|arís}}
