--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -49,6 +49,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Scottish Gaelic: {{t|gd|amhairc}}
 * Serbian: {{t|sh|posmatrati}}, {{t|sh|gledati}}
 * Spanish: {{t|es|contemplar}}, {{t+|es|mirar}}, {{t+|es|observar}}
+* Swedish: {{t|sv|skåda}}
 * Tonkawa: {{t|tqw|ˀana}}
 * Turkish: {{t+|tr|bakmak}}
 {{trans-bottom}}
