--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -12,7 +12,7 @@ From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[p
 # {{context|UK|Ireland|lang=en}} A [[private school]], [[particularly]] {{context|initially}} any [[grammar school]] [[operate]]d apart from the [[personal]] [[land]]s of its [[student]]s or {{context|from the 19th century}} the [[fee]]-[[pay]]ing [[secondary school]]s which [[develop]]ed from or were [[model]]led upon them; a [[British]] [[boarding school]]
 #*'''1580''' June 18, Letters of the Privy Council in John Strype's ''History of Edmund Grindal'' (1710), ii.xi.254
 #*:All such School-masters as have charge of Children and do instruct them either in '''Publick Schools''', or Private Houses.
-#*'''1604''', Acts of Parliament under James I, c. 4 §8
+#*'''1604''', Acts of Parliament 1 under James I, c.4, §8
 #*:No person shall keepe any schoole... except it be in some '''publike''' or free Grammer '''Schoole''', or in some such noblemans... or gentlemans... house as are not recusants.
 #*'''1749''', [[w:Henry Fielding|Henry Fielding]], ''[[w:Tom Jones|Tom Jones]]'', I.iii.v.184
 #*:This worthy Man having observed the imperfect Institution of our '''public Schools''', and the many Vices which Boys were there liable to learn, had resolved to educate his Nephew... in his own House.
@@ -22,23 +22,40 @@ From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[p
 #*: Who is there who has not jeered at the House of Lords, the military caste, the Royal Family, the '''public schools''', the huntin′ and shootin′ people, the old ladies in Cheltenham boarding houses, the horrors of ‘county’ society and the social hierarchy generally?
 #*'''2005''', Nick Laird, ''Utterly Monkey'', 223
 #*:It turned out she was posh, or posh-ish, having been to a '''public school''' somewhere in Hampshire.
-# {{context|North America|Australia|lang=en}} A [[public]]ly-[[fund]]ed and -[[administer]]ed [[school]].
-#* '''1950''', Samuel Macauley Jackson, Lefferts Augustine Loetscher, ''Twentieth Century Encyclopedia of Religious Knowledge'', [http://books.google.com.au/books?id=BYHYAAAAMAAJ&q=%22public+school%22|%22public+schools%22+australia+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+australia+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=SAzwT5v3M-XUigfUs-WGDQ&redir_esc=y page 378],
-#*: The '''public schools''' of Australia underwent an important change in the eighth decade of the nineteenth century, when obligatory gratuitous instruction was introduced into all the colonies. While many schools are still maintained by religious denominations, all citizens contribute to the support of the '''public schools'''.
-#* '''1999''', Carl Leon Bankston, R. Kent Rasmussen, ''Encyclopedia of Family Life'', Volume 4, [http://books.google.com.au/books?id=nXsYAAAAIAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=s-vvT4aqOMbdigfpruT1DA&redir_esc=y page 1174],
-#*: Parents may see '''public schools''' as actually irreligious and as undermining values that the parents hold dear.
-#* '''2003''', National Education Association of the United States, ''Speeches and Presentations to the Representative Assembly'', [http://books.google.com.au/books?id=3RElAQAAIAAJ&q=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=nubvT8_cFa-viQeT7NiYDQ&redir_esc=y page 40],
-#*: What my friend Reggie didn′t say was I was kicked out of the Catholic school. I then went to a '''public school''' that gave me a second chance. (Applause)
-#* '''2007''', Peter Sacks, ''Tearing Down the Gates: Confronting the Class Divide in American Education'', [http://books.google.com.au/books?id=EE-m0ZwjuqsC&pg=PA92&dq=%22public+school%22|%22public+schools%22+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=nubvT8_cFa-viQeT7NiYDQ&redir_esc=y#v=onepage&q=%22public%20school%22|%22public%20schools%22%20-intitle%3A%22public%22%20-inauthor%3A%22%22&f=false page 92],
-#*: As Americans, we like to think that our '''public school''' system can be a great equalizer, able to overcome social and economic disparities, not an institution that may in fact reproduce and justify existing inequalities.
-#* '''2008''' February 12, [[w:John Faulkner|John Faulkner]], speech to Australian House of Representatives, ''Condolences'', published in [[w:Kim Edward Beazley|Kim E. Beazley]], ''Father of the House: The Memoirs of Kim E. Beazley'', [http://books.google.com.au/books?id=vDOgx8xrRSUC&pg=PA316&dq=%22public+school%22|%22public+schools%22+australia+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=SAzwT5v3M-XUigfUs-WGDQ&redir_esc=y#v=onepage&q=%22public%20school%22|%22public%20schools%22%20australia%20-intitle%3A%22public%22%20-inauthor%3A%22%22&f=false page 316],
-#*: Struck by the vast difference between education opportunities available in the state′s '''public schools''' and private schools, Kim Beazley joined the Australian Labor Party with the aim, he later wrote, of bringing to Australia high-quality umiversal education.
-#* '''2008''', Hugh Mackay, ''Advance Australia...Where?'', [http://books.google.com.au/books?id=k8WhMIPVMOAC&pg=PT311&dq=%22public+school%22|%22public+schools%22+australia+-intitle:%22public%22+-inauthor:%22%22&hl=en&sa=X&ei=WCLwT725Bu2jiAetzaGoDQ&redir_esc=y#v=onepage&q=%22public%20school%22|%22public%20schools%22%20australia%20-intitle%3A%22public%22%20-inauthor%3A%22%22&f=false unnumbered page],
-#*: Under the headline ‘Private schools awash in cash’, ''The Sydney Morning Herald'' reported on 6 October 2006 that a leading private boys′ school with an operating surplus of $4.1 milliion for the year had received $3.3 million in government funding, while a girls′ school that had received $2.5 million had reported a net surplus of $2 million for the year. Meanwhile, 70 percent of '''public school''' principals surveyed by the Australian Education Union say their schools are in need of a serious maintenance overhaul.
+# {{context|obsolete}} A [[college]] or [[university]]
+#*'''1582''', W. Allen, ''Briefe Hist. Glorious Martyrdom'', sig. d3
+#*:Thither [to Douai] he went, where after a yeres great diligence and many excercises done booth in house and '''publike scholes''', he proceded bachilier of diuinitie.
+#*'''''ante'' 1593''', [[w:Christopher Marlowe|Christopher Marlowe]], ''Tragicall Hist. Faustus'' (1604), sig. A3v
+#*:Ile haue them fill the '''publike schooles''' with skill. Wherewith the students shal be brauely clad.
+#*'''1651''', [[w:Thomas Hobbes|Thomas Hobbes]], ''Leviathan'', iv.xlvi.370
+#*:That which is now called an University, is a Joyning together, and an Incorporation under one Government of many '''Publique Schools''', in one and the same Town or City.
+# {{context|North America|Australia|New Zealand|South Africa|formerly [[Scottish English|Scottish]]|lang=en}} A [[public]]ly-[[fund]]ed and -[[administer]]ed [[school]]; {{context|UK|Ireland}} such [[school]]s in the context of [[other]] [[countries]]
+#*'''1636''', ''Harvard College Records'' (1925), I.171
+#*:The Court voted for the erecting a '''Publick Schooll''' or Colledge in Cambridge.
+#*'''1683''', ''Pennsylvania Frame of Government'', §10
+#*:The Governor and Provincial Council shall erect and order all '''public Schooles'''.
+#*'''1702''', in Henry Paton's ''Minnigaff Parish Records: the Session Book of Minnigaff, 1694&ndash;1750'' (1939)
+#*:By Act of Parliament no school is to be kept within two miles of a '''publick school'''.
+#*'''1804''' Aug. 12, ''Sydney Gazette'', 1
+#*:A subscription... by a great part of the settlers and others to build a '''Public School''' at the Green Hills.
+#*'''1861''', [[w:Matthew Arnold|Matthew Arnold]], ''The Popular Education of France, with Notices of that of Holland and Switzerland'', x.105
+#*:Hardly anywhere in France... can the private boys' schools, whether they be lay or congreganist, hold their own in the competition with the '''public schools'''.
+#*'''1872''', Acts of Parliament 35 & 36 under Victoria (Scotland), c.62, §25
+#*:Every school under the management of the school board of a parish shall be deemed a parish school, and every school under the management of the school board of a burgh shall be deemed a burgh school, and all such schools are hereby declared to be '''public schools''' within the meaning of this Act.
+#*'''1872''' June, ''Canadian Monthly'', 483/1
+#*:'''Public Schools'''... are distinguished from those which until recently were entitled Grammar Schools.
+#*'''1889''' July, ''Harper's Magazine'', 226/1
+#*:As to the two races involved in this question of '''public schools''' the difference is this: the negroes do not wish mixed schools; the white people will not have them.
+#*'''1901''' Apr, ''Atlantic Monthly'', 434/1
+#*:If our '''public schools''' fail to furnish an education fully as good as can be obtained in private schools, intelligent, conscientious, and well-to-do parents will withdraw their children.
+#*'''1904''', ''Cape of Good Hope C.S. List'', 267
+#*:'''Public Schools'''. Course of Instruction... Class III. To include at least reading, writing, arithmetic, outlines of history and geography, and lessons on natural objects.
+#*'''1932''', Nelle Scanlan, ''Pencarrow'', 256
+#*:The term '''‘public school’''' has a different connotation in New Zealand. It implies the Borough or County school; the school provided by the State.
 
 ====Synonyms====
-* {{sense|fee-charging private or independent school}} [[private school]] {{qualifier|North America|Australia}}
-* {{sense|publicly administered school}} [[state school]]
+* {{sense|fee-charging private school, offering housing}} [[private school]], [[boarding school]]
+* {{sense|publicly administered school}} [[state school]], [[free school]]
 
 ====Translations====
 {{trans-top|private school}}
