/* Noun */ <public school#26923030>

--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -9,7 +9,7 @@ From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[p
 ===Noun===
 {{en-noun|head=[[public]] [[school]]}}
 
-# {{context|UK|Ireland|lang=en}} A [[private school]], [[particularly]] {{context|initially}} any [[grammar school]] [[operate]]d apart from the [[personal]] [[land]]s of its [[student]]s or {{context|from the 19th century}} the [[fee]]-[[pay]]ing [[secondary school]]s which [[develop]]ed from or were [[model]]led upon them; a [[British]] [[boarding school]]
+# {{context|UK|Ireland|lang=en}} Certain [[private school]]s, [[particularly]] {{context|initially}} any [[grammar school]] [[operate]]d apart from the [[personal]] [[land]]s of its [[student]]s or {{context|from the 19th century}} the [[fee]]-[[pay]]ing [[secondary school]]s which [[develop]]ed from or were [[model]]led upon them; a [[British]] [[boarding school]]
 #*'''1580''' June 18, Letters of the Privy Council in John Strype's ''History of Edmund Grindal'' (1710), ii.xi.254
 #*:All such School-masters as have charge of Children and do instruct them either in '''Publick Schools''', or Private Houses.
 #*'''1604''', Acts of Parliament 1 under James I, c.4, §8
