--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -140,7 +140,7 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|особље|n|sc=Cyrl}}
 *: Roman: {{t+|sh|osoblje|n}}
-* Spanish: {{t+|es|personal|m}}, {{t+|es|equipo|m}}, {{t+|es|empleado|m}}
+* Spanish: {{t+|es|personal|m}}, {{t+|es|equipo|m}}, {{t+|es|empleado|m}}, {{t+|es|plantilla|f}}
 * Swedish: {{t+|sv|personal|c}}
 * Uyghur: {{t|ug|خىزمەتچى|tr=xizmetchi|sc=ug-Arab}}
 * Volapük: {{qualifier|collective}} {{t+|vo|pösodef}}
