--- a/en/m/man on the street.741085.wikitext
+++ b/en/m/man on the street.741085.wikitext
@@ -8,7 +8,8 @@
 #*:"When do the Olympics begin?" a reporter from a Nagano television station asks me in a '''man-on-the-street''' interview.
 #*'''2005''', Martin Endress, George Psathas, and Hisashi Nasu, eds., ''Explorations of the Life-World: Continuing Dialogues with Alfred Schutz'', Springer, ISBN 1402032196, page 136,
 #*:It is not only the '''man on the street''' who is characterized by taking one's own system of relevance for granted. This holds true for the expert,....
+
 ====Synonyms====
-*[[layman]]
+* [[average Joe]], [[John Q. Public]], [[layman]]
 
 [[zh:man on the street]]
