--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -1,10 +1,10 @@
 ==English==
 [[File:Nalgonda Public School.jpg|right|thumb|[[w:Nalgonda Public School|Nalgonda Public School]], a private school in [[w:Nalgonda|Nalgonda]], [[India]]]]
-===Etymology===
-From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[personal]] [[tutor]]s; later, "[[state]]-run" and contrasted with [[private school]]s) + {{term|school|lang=en}}.
-
 ===Alternative forms===
 * [[public-school]] {{qualifier|attributive use}}
+
+===Etymology===
+From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[personal]] [[tutor]]s; later, "[[state]]-run" and contrasted with [[private school]]s) + {{term|school|lang=en}}.
 
 ===Noun===
 {{en-noun|head=[[public]] [[school]]}}
@@ -22,14 +22,14 @@ From {{term|public|lang=en}} (originally, "[[communal]]" and contrasted with [[p
 #*: Who is there who has not jeered at the House of Lords, the military caste, the Royal Family, the '''public schools''', the huntin′ and shootin′ people, the old ladies in Cheltenham boarding houses, the horrors of ‘county’ society and the social hierarchy generally?
 #*'''2005''', Nick Laird, ''Utterly Monkey'', 223
 #*:It turned out she was posh, or posh-ish, having been to a '''public school''' somewhere in Hampshire.
-# {{context|obsolete}} A [[college]] or [[university]]
+# {{label|en|obsolete}} A [[college]] or [[university]]
 #*'''1582''', W. Allen, ''Briefe Hist. Glorious Martyrdom'', sig. d3
 #*:Thither [to Douai] he went, where after a yeres great diligence and many excercises done booth in house and '''publike scholes''', he proceded bachilier of diuinitie.
 #*'''''ante'' 1593''', [[w:Christopher Marlowe|Christopher Marlowe]], ''Tragicall Hist. Faustus'' (1604), sig. A3v
 #*:Ile haue them fill the '''publike schooles''' with skill. Wherewith the students shal be brauely clad.
 #*'''1651''', [[w:Thomas Hobbes|Thomas Hobbes]], ''Leviathan'', iv.xlvi.370
 #*:That which is now called an University, is a Joyning together, and an Incorporation under one Government of many '''Publique Schools''', in one and the same Town or City.
-# {{context|North America|Australia|New Zealand|South Africa|formerly [[Scottish English|Scottish]]|lang=en}} A [[public]]ly-[[fund]]ed and -[[administer]]ed [[school]]; {{context|UK|Ireland}} such [[school]]s in the context of [[other]] [[countries]]
+# {{context|North America|Australia|New Zealand|South Africa|formerly [[Scottish English|Scottish]]|lang=en}} A [[public]]ly-[[fund]]ed and -[[administer]]ed [[school]]; {{context|UK|Ireland|lang=en}} such [[school]]s in the context of [[other]] [[countries]]
 #*'''1636''', ''Harvard College Records'' (1925), I.171
 #*:The Court voted for the erecting a '''Publick Schooll''' or Colledge in Cambridge.
 #*'''1683''', ''Pennsylvania Frame of Government'', §10
