--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -17,6 +17,9 @@
 [[Image:Music-staff.png|thumb|right|A musical staff]]
 
 # {{label|en|plural [[staffs]] or [[staves]]}} A [[long]], [[straight]] [[stick]], especially one used to assist in walking.
+#*{{quote-book|year=1927|author=[http://openlibrary.org/authors/OL2416183A F. E. Penny]
+|chapter=4|title=[http://openlibrary.org/works/OL16814587W Pulling the Strings]
+|passage=The case was that of a murder. It had an element of mystery about it, however, which was puzzling the authorities. A turban and loincloth soaked in blood had been found; also a '''staff'''.}}
 # {{label|en|music|plural [[staves]]}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
 # {{label|en|plural staff}} The [[employee]]s of a [[business]].
 #* {{quote-news|year=2011|date=December 16|author=Denis Campbell|work=Guardian
