--- a/en/c/crabbit.720291.wikitext
+++ b/en/c/crabbit.720291.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
-anyone that is not a happy bunny . for example when you have no sleep or you are ( just for Li( as she is crabbit)) hungry and you use bad  language or tone to address others e.g. being a dick or wideo
+===Etymology===
+{{etyl|sco|en}} {{term|crabbit|lang=sco}}, from {{term|crab}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈkɹabɪt/|lang=en}}
