/* Usage notes */ <at#27010533>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -57,7 +57,8 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * ''He threw the ball at me'' &mdash; (trying to hit me with it).
 
 * ''He talked to her'' &mdash; (conversationally).
-* ''He shouted at her'' &mdash; (aggressively).
+* ''He shouted at her'' &mdash; (aggressive
+DOG JUMPED AT ME
 
 ====Translations====
 {{trans-top|in or very near a particular place}}
