--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -222,7 +222,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Russian: {{t+|ru|свинья|f|tr=svinʹjá}}, {{t+|ru|боров|m|tr=bórov|sc=Cyrl}} {{qualifier|boar}}
 * {{ttbc|Sami}}<!-- Wiktionary considers this a language group; please specify the language more precisely -->: [[spiidni]]
 * Samoan: {{t|sm|pua'a}}
-* Sanskrit: {{t|sa|सूकर|tr=sūkaraḥ|sc=Deva}}
+* Sanskrit: {{t|sa|सूकर|tr=sūkara|sc=Deva}}
 * Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
 * Scottish Gaelic: {{t|gd|muc|f}}
 * Serbo-Croatian:
@@ -255,7 +255,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Turkmen: {{t|tk|doňuz}}
 * Tuvan: {{t|tyv|хаван|tr=khavan}}
 * Ukrainian: {{t|uk|свиня|f|tr=svynjá}}
-* Urdu: {{t|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t|ur|سور|m|tr=sū'ar|sc=ur-Arab}}
+* Urdu: {{t|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t|ur|سؤر|m|tr=sū'ar|sc=ur-Arab}}
 * Uyghur: {{t|ug|چوشقا|sc=ug-Arab}}
 * Uzbek: {{t|uz|choʻchka}}
 * Venetian: {{t+|vec|mas-cio|m}}, {{t|vec|porselo|m}}, {{t|vec|porzèl|m}}
@@ -290,6 +290,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Macedonian: {{t|mk|свиња|f|tr=svínja}}
 * Norwegian: {{t|no|storeter|m}}
 * Portuguese: {{t+|pt|porco|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|свиња|f}}, {{t|sh|крме|n}}
+*: Roman: {{t+|sh|svinja|f}}, {{t|sh|krme|n}}
 * Swahili: {{t+|sw|nguruwe}}
 * Turkish: {{t+|tr|obur}}
 * Welsh: {{t+|cy|mochyn|m}}
@@ -312,8 +315,8 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Portuguese: {{t+|pt|porco|m}}, {{t+|pt|nojento|m}}
 * Russian: {{t+|ru|свинья|tr=svin’já|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|свиња|f}}
-*: Roman: {{t+|sh|svinja|f}}
+*: Cyrillic: {{t|sh|свиња|f}}, {{t|sh|крме|n}}
+*: Roman: {{t+|sh|svinja|f}}, {{t|sh|krme|n}}
 * Slovene: {{t+|sl|svinja|f}}, {{t|sl|prasec|m}}
 * Swahili: {{t+|sw|nguruwe}}
 * Turkish: {{t+|tr|tiksindirici}}
@@ -336,8 +339,8 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Portuguese: {{t+|pt|porco|m}}
 * Russian: {{t+|ru|свинья|tr=svin’já|f}}, {{t+|ru|свинтус|tr=svíntus|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|свиња|f}}
-*: Roman: {{t+|sh|svinja|f}}
+*: Cyrillic: {{t|sh|свиња|f}}, {{t|sh|крме|n}}
+*: Roman: {{t+|sh|svinja|f}}, {{t|sh|krme|n}}
 * Slovene: {{t+|sl|prašič|m}}
 * Swahili: {{t+|sw|nguruwe}}
 * Turkish: {{t+|tr|pasaklı}}
