--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -53,6 +53,7 @@
 * Hungarian: {{t+|hu|kivonás}}
 * Italian: {{t+|it|sottrazione|f}}
 {{trans-mid}}
+* Maori: {{t|mi|tangohanga}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
 *: Nynorsk: {{t|nn|subtraksjon|m}}
