t+cmn:[[用]] ([[WT:EDIT|Assisted]]) <consume#27071220>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -46,6 +46,8 @@ From {{etyl|fro|en}} {{term|consumer|lang=fro}}, from {{etyl|la|en}} {{term|cons
 ====Translations====
 {{trans-top|to use}}
 * Bulgarian: {{t+|bg|изразходвам}}
+* Chinese:
+*: Mandarin: {{t+|cmn|用|sc=Hani}}
 * Czech: {{t+|cs|spotřebovat}}
 * Dutch: {{t+|nl|consumeren}}, {{t+|nl|verbruiken}}
 * Finnish: {{t+|fi|kuluttaa}}
