--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -58,6 +58,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * Jèrriais: {{t|roa-jer|chou-flieur|m}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu|sc=Hang}}
 * Latvian: {{t|lv|ziedkāposts|m}}
+* Lithuanian: {{t|lt|žiedinis kopūstas|m}}
 * Macedonian: {{t|mk|карфиол|m|tr=karfiól}}
 * Malay: {{t|ms|kubis bunga}}
 * Navajo: {{t|nv|chʼil łigaii}}, {{t|nv|sęęschʼil}}
