t+tr:[[o zaman]] ([[WT:EDIT|Assisted]]) <then#27123967>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -326,6 +326,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * {{ttbc|es}}: {{t+|es|entonces|m}}
 {{trans-mid}}
 * {{ttbc|sv}}: {{t+|sv|dess}}, {{t+|sv|då}}
+* Turkish: {{t|tr|o zaman}}
 {{trans-bottom}}
 
 {{checktrans-top}}
