--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -64,7 +64,7 @@ The word is sometimes considered to come from an {{etyl|xno|-}} derivative of {{
 * Romanian: {{t+|ro|șoarece de pădure}}
 * Romansch: {{t|rm|durmigliet}}
 * Russian: {{t+|ru|соня|f|tr=sónja|sc=Cyrl}}
-<!-- * {{ttbc|Sami}}should be in a sub-item: [[hásselsáhpán]] -->
+* {{ttbc|Sami}} should be in a sub-item: [[hásselsáhpán]] 
 * Sardinian: {{t|sc|topi de venadroxu}}, {{t|sc|medrona de tzirva}}
 * Scottish Gaelic: {{t|gd|dallag|f}}
 * Serbo-Croatian:
