t+it:[[pastorale]] t+it:[[vincastro]] ([[WT:EDIT|Assisted]]) <crook#27132621>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -74,6 +74,7 @@ From {{etyl|enm|en}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{ety
 * Greek: {{t+|el|γκλίτσα|f|tr=gklítsa}}
 * Icelandic: {{t|is|hirðingjastafur|m}}
 * Irish: {{t|ga|crúca|m}}
+* Italian: {{t+|it|pastorale|m}}, {{t+|it|vincastro|m}}
 * Spanish: {{t+|es|cayado|m}}
 {{trans-bottom}}
 
