--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -13,7 +13,7 @@
 * {{homophones|lang=en|martin|Martin}} {{qualifier|in some accents}}
 
 ===Etymology 1===
-{{etyl|enm|en}} {{term|martren|lang=enm}}, {{term|martryn|lang=enm}}, from {{etyl|xno|en}} {{term|martrine|lang=fro}} 'marten fur', from Old Low Franconian *''marþrin'' 'of marten fur' (cf. Middle Dutch {{term|martren|lang=dum}}), from *''marþra'' 'marten' (compare Dutch {{term|marter|lang=nl}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*marþuz}} (compare Low German {{term||Mort}}, West Frisian {{term|murd|lang=fy}} 'polecat', Old English {{term|mearþ|lang=ang}} 'shrew'), originally 'wedding' (cf. Crimean Gothic {{term||marzus}} 'wedding'), from {{etyl|ine-pro|en}} {{m|ine-pro|*martus}} 'bride'. More at [[marry]]. For sense development, compare Italian ''donnola'' 'weasel', from ''donna'' 'lady', Greek ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'.
+From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} {{m|fro|martrine||marten fur}}, from {{etyl|odt|en}} {{m|odt|*marþrin||of marten fur}} (cf. {{etyl|dum|-}} {{m|dum|martren}}), from {{m|odt|*marþra||marten}} (compare {{etyl|nl|-}} {{m|nl|marter}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*marþuz}} (compare Low German {{term||Mort}}, West Frisian {{m|fy|murd||polecat}}, {{etyl|ang|-}} {{m|ang|mearþ||shrew}}), originally 'wedding' (cf. {{etyl|gme-cgo|-}} {{m|gme-cgo||marzus|wedding}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*martus||bride}}. More at [[marry]]. For sense development, compare {{etyl|it|-}} {{m|it|donnola||weasel}}, from {{m|it|donna||lady}}, {{etyl|el|-}} ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'.
 
 ====Noun====
 {{en-noun}}
