--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -138,6 +138,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Macedonian: {{t|mk|нешто|n|tr=néšto}}, {{t|mk|ствар|f|tr=stvar|sc=Cyrl}}
 * Malagasy: {{t+|mg|zavatra}}
 * Marathi: {{t|mr|वस्तु|tr=vastu}}
+* Mirandese: {{t|mwl|cousa|f}}
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
 * Old Church Slavonic: {{t|cu|вєшть|f|tr=veštĭ|sc=Cyrs}}
 * Old English: {{t|ang|þing|n}}
