--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -6,6 +6,11 @@
 
 # {{context|chiefly|US|lang=en}} A [[legally]] [[enforceable]] order, [[decree]], or [[regulation]] issued on the authority of the head of the executive branch of [[government]].
 
+==== Translations ====
+{{trans-top|decree issued on the authority of the executive branch of government}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===See also===
 *[[order-in-council]]
 
