Portuguese entry (semi-automated). <mania#27190818>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -162,6 +162,19 @@ From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
 
 ----
 
+==Portuguese==
+
+===Noun===
+{{pt-noun|f}}
+
+# {{l/en|mania}} {{gloss|excessive or unreasonable desire}}
+# {{l/en|vice}} {{gloss|bad habit}}
+
+====Synonyms====
+* {{sense|vice}} {{l/pt|vício}}
+
+----
+
 ==Tahitian==
 {{was fwotd|2013|January|5}}
 
