--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -115,7 +115,7 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 *: ''At the top'' = na vrchu
 * Slovene: {{t+|sl|pri}}, {{t+|sl|na}}, {{t|sl|ob}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|wu}}
+*: Lower Sorbian: {{t|dsb|wu}}, {{t|dsb|pśi}}
 * Spanish: {{t+|es|en}}
 * Swedish: {{t+|sv|på}}, {{t+|sv|vid}}
 *: ''At home'' = hemma
