--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -8,8 +8,8 @@
 From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{etyl|ang|en}} {{m|ang|þēah|| though, although, even if, that, however, nevertheless, yet, still; whether}}, later superseded in many dialects by {{etyl|enm|en}} {{term|though|lang=enm}}, {{term|thogh|lang=enm}}, from {{etyl|non|en}} {{m|non|*þóh}} (later {{term|þó|lang=non}}); both from {{etyl|gem-pro|en}} {{m|gem-pro|*þauh||though}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*to-}}. Akin to Scots {{term|thoch||though|lang=sco}}, {{etyl|stq|-}} {{term|dach||though|lang=stq}}, {{etyl|fy|-}} {{term|dôch|lang=fy}}, {{term|dochs||though|lang=fy}}, {{etyl|nl|-}} {{term|doch||though|lang=nl}}, {{etyl|de|-}} {{term|doch||though|lang=de}}, {{etyl|sv|-}} {{term|dock||however, still|lang=sv}}, {{etyl|is|-}} {{term|þó||though|lang=is}}. More at [[that]].
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ðəʊ/|lang=en}}
-* {{a|US}} {{IPA|/ðoʊ/|lang=en}}
+* {{a|UK}} {{enPR|''th''ō}}, {{IPA|/ðəʊ/|lang=en}}
+* {{a|US}} {{enPR|''th''ō}},{{IPA|/ðoʊ/|lang=en}}
 * {{audio|en-us-though.ogg|Audio (US)|lang=en}}
 * {{rhymes|əʊ|lang=en}}
 
