t+kw:[[gwiwer]] t+gv:[[fiorag]] ([[WT:EDIT|Assisted]]) <squirrel#27206463>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -44,6 +44,7 @@ From {{etyl|fro|en}} {{term|esquirel|lang=fro}}, {{term|escurel|lang=fro}} (when
 * Chinese:
 *: Mandarin: {{t+|cmn|松鼠|tr=sōngshǔ|sc=Hani}}, {{t+|cmn|灰鼠|tr=huīshǔ|sc=Hani}}, {{t+|cmn|栗鼠|tr=lìshǔ|sc=Hani}}
 * Chuvash: {{t|cv|пакша|tr=pakşa|sc=Cyrl}}
+* Cornish: {{t|kw|gwiwer|m}}
 * Czech: {{t+|cs|veverka|f}}
 * Dalmatian: {{t|dlm|viala|f}}
 * Danish: {{t+|da|egern|n}}
@@ -94,6 +95,7 @@ From {{etyl|fro|en}} {{term|esquirel|lang=fro}}, {{term|escurel|lang=fro}} (when
 *: Rumi: {{t|ms|tupai}}, {{t|ms|bajing}}
 *: Jawi: {{t|ms|توڤاي|sc=Arab}}, {{t|ms|باجيڠ|sc=Arab}}
 * Maltese: {{t|mt|skwiril|m}}
+* Manx: {{t|gv|fiorag|f}}
 * Narragansett: {{t|xnt|mishánneke}}
 * Navajo: {{t|nv|tseekʼi nástánii}}
 * Norwegian:
