/* English */ added pronunciation section <quadrant#27207333>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -7,6 +7,9 @@
 ===Etymology===
 From {{etyl|la|en}} {{term|quadrantem|lang=la}}, accusative singular of {{term|quadrāns||fourth part of something, quarter|lang=la}}.
 
+===Pronunciation===
+* {{enPR|kwŏdʹrənt}}, {{IPA|/ˈkwɑd.ɹənt/}}
+
 ===Noun===
 {{en-noun}}
 
